Disable date editing from non original schedule

--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -29,6 +29,7 @@
     <% end %>
 
     <%= schedule_form.hidden_field :id %>
+    <%= schedule_form.hidden_field :original_schedule %>
 
     <div class="row">
       <div class="col-sm-4">
