Fix quick butons index responsive view

--- a/app/views/quick_buttons/index.html.erb
+++ b/app/views/quick_buttons/index.html.erb
@@ -4,37 +4,59 @@
   <h1>Quick Buttons List</h1>
 </div>
 
-<div class="row">
-  <div class="col-sm-2"><b>Title</b></div>
-  <div class="col-sm-2"><b>Description</b></div>
-  <div class="col-sm-2"><b>Duration</b></div>
-  <div class="col-sm-2"><b>Index</b></div>
-  <div class="col-sm-2"><b>Device Name</b></div>
-  <div class="col-sm-2"><b>Actions</b></div>
-</div>
+<div class="responsive-table-container">
 
-<hr/>
+  <div class="responsive-table">
 
-<% @quick_buttons.each do |quick_button| %>
-  <div class="row">
-    <div class="col-sm-2"><%= quick_button.title %></div>
-    <div class="col-sm-2"><%= quick_button.description %></div>
-    <div class="col-sm-2"><%= quick_button.duration %></div>
-    <div class="col-sm-2"><%= quick_button.index_on_device %></div>
-    <div class="col-sm-2"><%= quick_button.device.name %></div>
-    <div class="col-sm-2">
-      <%= link_to(quick_button) do %>
-        <span class="glyphicon glyphicon-zoom-in"></span>
-      <% end %> |
-      <%= link_to edit_quick_button_path(quick_button) do %>
-        <span class="glyphicon glyphicon-pencil"></span>
-      <% end %>  |
-      <%= link_to quick_button, method: :delete, data: { confirm: 'Are you sure?' } do %>
-        <span class="glyphicon glyphicon-remove"></span>
-      <% end %>
+    <div class="responsive-table-header">
+      <div class="row">
+        <div class="col-md-2"><b>Title</b></div>
+        <div class="col-md-2"><b>Description</b></div>
+        <div class="col-md-2"><b>Duration</b></div>
+        <div class="col-md-2"><b>Index</b></div>
+        <div class="col-md-2"><b>Device Name</b></div>
+        <div class="col-md-2"><b>Actions</b></div>
+      </div>
     </div>
+
+    <hr/>
+
+    <% @quick_buttons.each do |quick_button| %>
+      <div class="row">
+        <div data-label="<%= QuickButton.human_attribute_name(:title) %>" class="col-md-2">
+          <div class="responsive-table-element"><%= quick_button.title %></div>
+        </div>
+        <div data-label="<%= QuickButton.human_attribute_name(:description) %>" class="col-md-2">
+          <div class="responsive-table-element"><%= quick_button.description %></div>
+        </div>
+        <div data-label="<%= QuickButton.human_attribute_name(:duration) %>" class="col-md-2">
+          <div class="responsive-table-element"><%= quick_button.duration %></div>
+        </div>
+        <div data-label="<%= QuickButton.human_attribute_name(:index_on_device) %>" class="col-md-2">
+          <div class="responsive-table-element"><%= quick_button.index_on_device %></div>
+        </div>
+        <div data-label="<%= Device.human_attribute_name(:name) %>" class="col-md-2">
+          <div class="responsive-table-element"><%= quick_button.device.name %></div>
+        </div>
+        <div data-label="Actions" class="col-md-2">
+          <div class="responsive-table-element">
+            <%= link_to(quick_button) do %>
+              <span class="glyphicon glyphicon-zoom-in"></span>
+            <% end %> |
+            <%= link_to edit_quick_button_path(quick_button) do %>
+              <span class="glyphicon glyphicon-pencil"></span>
+            <% end %>  |
+            <%= link_to quick_button, method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <span class="glyphicon glyphicon-remove"></span>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <hr>
+    <% end %>
+
   </div>
-  <hr>
-<% end %>
+
+</div>
 
 <%= link_to 'New Quick Button', new_quick_button_path %>
