--- a/app/views/user_mailer/notify_user_for_offline_devices.html.erb
+++ b/app/views/user_mailer/notify_user_for_offline_devices.html.erb
@@ -1,10 +1,5 @@
-<h1>Welcome to example.com, <%= @user.email %></h1>
+<h1>Inactivity notification for device '<%= @device_name %>'</h1>
 <p>
-  You have successfully signed up to example.com,
-  your username is: .<br>
+  Device '<%= @device_name %>' is inactive for more
+  than <%= @offline_device_time_for_send_notification %> minutes
 </p>
-<p>
-  To login to the site, just follow this link:.
-</p>
-<p>Thanks for joining and have a great day!</p>
-notify_user_for_offline_devices.html.erb
