--- a/app/views/user_mailer/notify_user_for_offline_devices.text.erb
+++ b/app/views/user_mailer/notify_user_for_offline_devices.text.erb
@@ -1,9 +1,5 @@
-Welcome to example.com, <%= @user.email %>
-===============================================
+Inactivity notification for device '<%= @device_name %>'
+================================================================================
 
-You have successfully signed up to example.com,
-your username is:
-
-To login to the site, just follow this link.
-
-Thanks for joining and have a great day!
+Device '<%= @device_name %>' is inactive for more
+than <%= @offline_device_time_for_send_notification %> minutes
