--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<%= line_chart(
+<% line_chart(
         SmartThermostatHistorySample.all.collect do |hs|
           [hs.sample_time, hs.inside_temperature]
         end
