Prepare devices index for adding more info

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,7 +71,7 @@ $gray-medium-light: #eaeaea;
         margin-bottom: 10px;
         display: block;
         border: 1px solid #ddd;
-        .col-md-1, .col-md-2, .col-md-5 {
+        .col-md-1, .col-md-2, .col-md-5, .col-md-6 {
           display: block;
           text-align: right;
           font-size: 13px;
