--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -10,8 +10,9 @@
 
     <div class="responsive-table-header">
       <div class="row">
-        <div class="col-md-5"><b>Name</b></div>
-        <div class="col-md-5"><b>Location</b></div>
+        <div class="col-md-2"><b>Name</b></div>
+        <div class="col-md-6"><b>Current Values</b></div>
+        <div class="col-md-2"><b>Location</b></div>
         <div class="col-md-2"><b>Actions</b></div>
       </div>
       <hr/>
@@ -20,10 +21,16 @@
     <% @devices.each do |device| %>
 
       <div class="row">
-        <div data-label="<%= Device.human_attribute_name(:name) %>" class="col-md-5">
+        <div data-label="<%= Device.human_attribute_name(:name) %>" class="col-md-2">
           <div class="responsive-table-element"><%= device.name %></div>
         </div>
-        <div data-label="<%= Device.human_attribute_name(:location) %>" class="col-md-5">
+        <div data-label="Current Values" class="col-md-6">
+          <div class="responsive-table-element">
+            Fill in with device's current values
+          </div>
+        </div>
+
+        <div data-label="<%= Device.human_attribute_name(:location) %>" class="col-md-2">
           <div class="responsive-table-element"><%= device.location %></div>
         </div>
         <div data-label="Actions" class="col-md-2">
