--- a/app/views/user_mailer/notify_user_for_offline_devices.html.erb
+++ b/app/views/user_mailer/notify_user_for_offline_devices.html.erb
@@ -1,5 +1,5 @@
 <h1>Inactivity notification for device '<%= @device_name %>'</h1>
 <p>
-  Device '<%= @device_name %>' is inactive for more
-  than <%= @offline_device_time_for_send_notification %> minutes
+  Device '<%= @device_name %>' is inactive
+  for <%= @offline_device_time_for_send_notification %> or more minutes
 </p>
