--- a/app/views/devices/_device_attribute_form_element.html.erb
+++ b/app/views/devices/_device_attribute_form_element.html.erb
@@ -1,7 +1,7 @@
 <% device_attribute_index = (defined? device_attribute_counter) ? device_attribute_counter : 'INDEX' %>
 <% prefix = 'device[attributes]' %>
 
-<div class="device-attribute form-row" data-index="<%= device_attribute_index %>">
+<div class="device-attribute form-row responsive-table-element-field" data-index="<%= device_attribute_index %>">
 
   <% if device_attribute.errors.any? %>
     <div id="errors-explanation">
