--- a/app/views/user_mailer/notify_user_for_offline_devices.text.erb
+++ b/app/views/user_mailer/notify_user_for_offline_devices.text.erb
@@ -1,5 +1,4 @@
 Inactivity notification for device '<%= @device_name %>'
 ================================================================================
 
-Device '<%= @device_name %>' is inactive for more
-than <%= @offline_device_time_for_send_notification %> minutes
+Device '<%= @device_name %>' is inactive for <%= @offline_device_time_for_send_notification %> or more minutes
