Convert float columns to decimals | Computing heating curves

--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -28,7 +28,7 @@
 
 <% line_chart(
         SmartThermostatHistorySample.all.collect do |hs|
-          [hs.sample_time, hs.inside_temperature]
+          [hs.sample_datetime, hs.inside_temperature]
         end
     ) %>
 
