--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -26,7 +26,14 @@
         </div>
         <div data-label="Current Values" class="col-md-6">
           <div class="responsive-table-element">
-            Fill in with device's current values
+            <% dev_attr_count = device.device_attributes.size-1 %>
+            <% device.device_attributes.each_with_index do |dev_attr, idx| %>
+              <% if dev_attr.current_value %>
+                <%= '|' unless (idx == 0) %>
+                <%= dev_attr.name %>:
+                <%= dev_attr.current_value %> <%= dev_attr.unit %>
+              <% end %>
+            <% end %>
           </div>
         </div>
 
