Fix bool actions on load | Fix css for schedule events

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
   display: block;
 }
 
-/* Override Bootstrap 3 font locations (tasloum) */
+/* Override Bootstrap 3 font locations */
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: asset-url('bootstrap/fonts/glyphicons-halflings-regular.eot');
