--- a/app/views/quick_buttons/_quick_button_form.html.erb
+++ b/app/views/quick_buttons/_quick_button_form.html.erb
@@ -86,6 +86,6 @@
 
 <div id="quick-button-subforms-templates" class="hidden">
   <div class="quick-button-action-template">
-    <%= render partial: '/actions/action_form_element', locals: { action: Action.new, prefix_for_subform: 'REPLACE_WITH_EVENT_FORM_PREFIX' } %>
+    <%= render partial: '/actions/action_form_element', locals: { action: Action.new, prefix_for_subform: 'REPLACE_WITH_EVENT_FORM_PREFIX', idx: nil } %>
   </div>
 </div>
