--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Device List') %>
 
-<div class="well">
+<div class="page-header-title">
   <h1>Devices List</h1>
 </div>
 
@@ -61,4 +61,4 @@
 
 </div>
 
-<%= link_to 'New Device', new_device_path %>
+<%= link_to('New Device', new_device_path, class: 'asdf') %>
