--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Create New Device') %>
 
-<div class='well'>
+<div class="page-header-title">
   <h1>Create Device</h1>
 </div>
 
