--- a/app/views/quick_buttons/index.html.erb
+++ b/app/views/quick_buttons/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Quick Buttons List') %>
 
-<div class="well">
+<div class="page-header-title">
   <h1>Quick Buttons List</h1>
 </div>
 
