--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -4,9 +4,9 @@
     border-bottom: solid 1px;
   }
   &.even {
-    background-color: darkorange;
+    background-color: $custom-orange-medium;
   }
   &.odd {
-    background-color: cadetblue;
+    background-color: $custom-green-light;
   }
 }
