--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,11 +29,11 @@
   <%= render 'layouts/footer' %>
 
   <div>
-    <%= debug(Time.now) if Rails.env.development? %>
-    <%= debug(Time.current) if Rails.env.development? %>
-    <%= debug(RUBY_VERSION) if Rails.env.development? %>
-    <%= debug(params) if Rails.env.development? %>
-    <%= debug(I18n.t('hello')) if Rails.env.development? %>
+    <% debug(Time.now) if Rails.env.development? %>
+    <% debug(Time.current) if Rails.env.development? %>
+    <% debug(RUBY_VERSION) if Rails.env.development? %>
+    <% debug(params) if Rails.env.development? %>
+    <% debug(I18n.t('hello')) if Rails.env.development? %>
   </div>
 
 </div>
